<resources>
    <string name="app_name">ShoppingList</string>
    <string name="about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="personalLogin">Email n\' Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>

    <string name="ConfirmEmail">Please confirm your email in your inbox.</string>
    <string name="LoginSuccess">Successfully logged in!.</string>
    <string name="AboutApp">About app.!</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="shopping_cart">Cart</string>
    <string name="item_list">Lists</string>
    <string name="historical">Historical</string>
    <string name="SignOut">Sign out</string>
    <string name="products">Products</string>
    <string name="add_product">Add Product</string>
    <string name="create_product">CREATE PRODUCT</string>
    <string name="ProductTitle">Producto:</string>
    <string name="ProductCategory">Categoría:</string>
    <string name="PriceQualification">Precio:</string>
    <string name="ProductScore">Calificación:</string>
    <string name="ProductProvider">Proveedor:</string>
    <string name="ProductObservations">Observaciones:</string>
    <string name="FirstStar">First star.</string>
    <string name="SecondStar">Second star.</string>
    <string name="ThirdStar">Third star.</string>
    <string name="FourthStar">Fourth star.</string>
    <string name="FifthStar">Fifth star.</string>
    <string name="ProductImageDescription">Product description.</string>
    <string name="ProductPrice">Precio:</string>
    <string name="ProductDescription">Descripción:</string>
    <string name="SaveProduct">GUARDAR PRODUCTO</string>
    <string name="saveProduct">Guardar</string>

</resources>