<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cart">

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.shoppinglist.shoppingListApp.ui.cart.CartFragment"
        android:label="@string/shopping_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.shoppinglist.shoppingListApp.ui.lists.ListFragment"
        android:label="@string/item_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_historical"
        android:name="com.example.shoppinglist.shoppingListApp.ui.historical.HistoricalFragment"
        android:label="@string/historical"
        tools:layout="@layout/fragment_historical" />
    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.shoppinglist.shoppingListApp.ui.products.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_navigation_products_to_createProductFragment"
            app:destination="@id/createProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/createProductFragment"
        android:name="com.example.shoppinglist.shoppingListApp.ui.products.createProduct.CreateProductFragment"
        android:label="@string/create_product"
        tools:layout="@layout/fragment_create_product" />
</navigation>