<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="3dp"
    android:layout_margin="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <ImageView
            android:id="@+id/ProductImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/ProductImageDescription"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ProductImage"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/ProductTitle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ProductTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ProductImage"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/ProductCategory"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ProductCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ProductImage"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/ProductProvider"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ProductProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ProductImage"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/PriceQualification"
                android:textStyle="bold" />

           <TextView
               android:id="@+id/ProductPrice"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ProductImage"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:text="@string/ProductScore"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ProductQualityStar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:contentDescription="@string/FirstStar"
                android:src="@drawable/ic_baseline_star_24"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/ProductQualityStar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:contentDescription="@string/SecondStar"
                android:src="@drawable/ic_baseline_star_24"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/ProductQualityStar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:contentDescription="@string/ThirdStar"
                android:src="@drawable/ic_baseline_star_24"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/ProductQualityStar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:contentDescription="@string/FourthStar"
                android:src="@drawable/ic_baseline_star_24"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/ProductQualityStar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:contentDescription="@string/FifthStar"
                android:src="@drawable/ic_baseline_star_24"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ProductObservations"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <TextView
            android:id="@+id/ProductObservations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>