<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="3dp"
    android:layout_margin="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/ProductTitle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ProductTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/ProductCategory"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ProductCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/ProductProvider"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ProductProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/PriceQualification"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ProductPriceStar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:src="@drawable/ic_baseline_attach_money_24" />

            <ImageView
                android:id="@+id/ProductPriceStar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:src="@drawable/ic_baseline_attach_money_24" />

            <ImageView
                android:id="@+id/ProductPriceStar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:src="@drawable/ic_baseline_attach_money_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/QualityQualification"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ProductQualityStar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:src="@drawable/ic_baseline_star_24"/>

            <ImageView
                android:id="@+id/ProductQualityStar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:src="@drawable/ic_baseline_star_24"/>

            <ImageView
                android:id="@+id/ProductQualityStar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:src="@drawable/ic_baseline_star_24"/>

            <ImageView
                android:id="@+id/ProductQualityStar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:src="@drawable/ic_baseline_star_24"/>

            <ImageView
                android:id="@+id/ProductQualityStar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:src="@drawable/ic_baseline_star_24"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>